# tese-edu

./: README.md
bluerov_bringup/config/dev_configs/: ros.yaml
bluerov_bringup/config/real/heavy/: control.yaml  nav.yaml  process.yaml
bluerov_bringup/config/simulation/heavy/: control.yaml  nav.yaml  process.yaml
bluerov_bringup/launch/: start_scenario.launch
bluerov_bringup/launch/dev_launch/: medusa_stack.launch  sliding_mode_stack.launch  yaw_ref_generator_stack.launch
bluerov_drivers/a50_dvl/: CMakeLists.txt  package.xml  setup.py
bluerov_drivers/a50_dvl/config/: config_a50_dvl.yaml
bluerov_drivers/a50_dvl/doc/: README.md
bluerov_drivers/a50_dvl/launch/: a50_dvl.launch
bluerov_drivers/a50_dvl/scripts/: a50_dvl_gui_node  a50_dvl_node
bluerov_drivers/a50_dvl/src/a50_dvl_ros/: A50DvlNode.py  subscriber_gui.py
bluerov_drivers/bluerov_interface/src/: BluerovInterfaceNode.py
bluerov_drivers/drivers_libraries/drivers_libraries/: CMakeLists.txt  package.xml
bluerov_drivers/drivers_libraries/serial_lib/: CMakeLists.txt  package.xml
bluerov_drivers/drivers_libraries/serial_lib/doc/: README.md
bluerov_drivers/drivers_libraries/serial_lib/include/: AsyncSerial.cpp  AsyncSerial.h  nmeaSerial.h
bluerov_drivers/drivers_libraries/serial_port/: CMakeLists.txt  package.xml
bluerov_drivers/drivers_libraries/serial_port/doc/: Readme.md
bluerov_drivers/drivers_libraries/serial_port/include/: SerialPort.h
bluerov_drivers/drivers_libraries/serial_port/src/: SerialPort.cpp
bluerov_drivers/vn100_imu/: CMakeLists.txt  package.xml
bluerov_drivers/vn100_imu/config/: config_vn100_imu.yaml  config_vn100_imu_medusa.yaml
bluerov_drivers/vn100_imu/config/calibrations/: delfim.yaml  hrov.yaml  mblack.yaml  mred.yaml
bluerov_drivers/vn100_imu/doc/: README.md
bluerov_drivers/vn100_imu/doc/imu/: imu  imu.csv
bluerov_drivers/vn100_imu/include/vn100_imu_ros/: Vn100ImuNode.h
bluerov_drivers/vn100_imu/launch/: vn100_imu.launch  vn100_imu_medusa.launch
bluerov_drivers/vn100_imu/msg/: imu_pp.msg
bluerov_drivers/vn100_imu/scripts/: vn100_socat.bash
bluerov_drivers/vn100_imu/src/vn100_imu_ros/: Vn100ImuNode.cpp
dvl-a50-ros-driver/: CMakeLists.txt  package.xml
dvl-a50-ros-driver/launch/: launch_dvl.launch
dvl-a50-ros-driver/scripts/: publisher.py  subscriber_gui.py
sliding_mode/: CMakeLists.txt  package.xml
sliding_mode/include/sliding_mode/algorithm/: sliding_mode.hpp
sliding_mode/include/sliding_mode/ros/: sliding_mode_node.hpp
sliding_mode/msg/: DebugSlidingMode.msg
sliding_mode/src/algorithm/: sliding_mode.cpp
sliding_mode/src/ros/: sliding_mode_node.cpp
sliding_mode/srv/: ChangeSMParams.srv
yaw_ref_generator/: CMakeLists.txt  package.xml
yaw_ref_generator/include/yaw_ref_generator/algorithm/: yaw_ref_generator.hpp
yaw_ref_generator/include/yaw_ref_generator/ros/: yaw_ref_generator_node.hpp
yaw_ref_generator/src/algorithm/: yaw_ref_generator.cpp
yaw_ref_generator/src/ros/: yaw_ref_generator_node.cpp
