<?xml version="1.0"?>
<package format="2">
  <name>yaw_ref_generator</name>
  <version>0.0.0</version>
  <description>The yaw_ref_generator package</description>

  <maintainer email="eduardo.m.a.cunha@tecnico.ulisboa.pt">Eduardo Cunha</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>medusa_gimmicks_library</depend>

  <!-- Libraries to generate the messages and services -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
