<?xml version="1.0"?>
<package format="2">
 <name>a50_dvl</name>
 <version>1.0.0</version>
 <description>
 TODO!
 </description>

 <license>GPLv3</license>

 <author email="dsor@gmail.com">DSOR GROUP</author>
 <maintainer email="dsor@gmail.com">genX</maintainer>

 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>message_generation</build_depend>
 
 <depend>std_msgs</depend> 
 <depend>roscpp</depend>
 <depend>rospy</depend>
 <depend>geometry_msgs</depend>
 <depend>dsor_msgs</depend>
 <exec_depend>message_runtime</exec_depend>
 <exec_depend>python-tk</exec_depend>

</package>
