<?xml version="1.0"?>
<package format="2">
 <name>drivers_libraries</name>
 <version>1.0.0</version>
 <description>Libraries usefull for the drivers</description>

 <license>MIT</license>

 <maintainer email="marcelo.jacinto@tecnico.ulisboa.pt">Marcelo Jacinto</maintainer>
 <maintainer email="david.souto@tecnico.ulisboa.pt">David Souto</maintainer>
 <maintainer email="andre.potes@tecnico.ulisboa.pt">Andre Potes</maintainer>
 <maintainer email="jquintas@gmail.com">Joao Quintas</maintainer>
 <maintainer email="jcruz.pedro.cruz@tecnico.ulisboa.pt">Joao Cruz</maintainer>

 <author email="jorgeeribeiro@gmail.com">Jorge Ribeiro</author>
 <author email="miguel.silva.ribeiro@tecnico.ulisboa.pt">Miguel Ribeiro</author>
 <author email="henrique.ribeiro@tecnico.ulisboa.pt">Henrique Silva</author>

 <buildtool_depend>catkin</buildtool_depend>

</package>
