<?xml version="1.0"?>
<package>
  <name>serial_port</name>
  <version>1.0.0</version>
  <description>
	The SerialPort package
	  
	Institute for Systems and Robotics
	Instituto Superior Tecnico
	Lisbon, Portugal
  </description>

  <maintainer email="jorgeeribeiro@gmail.com">Jorge Ribeiro</maintainer>
  <maintainer email="miguel.silva.ribeiro@tecnico.ulisboa.pt">Miguel Ribeiro</maintainer>
  <maintainer email="henrique.ribeiro@tecnico.ulisboa.pt">Henrique Silva</maintainer>

  <license>MIT</license>
  
  <url type="website">http://dsor.isr.tecnico.ulisboa.pt/</url>
  <url type="repository">https://github.com/dsor-isr/medusa_drivers</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

</package>
